better prompt view

--- a/prompt_responses/templates/base.html
+++ b/prompt_responses/templates/base.html
@@ -27,15 +27,22 @@
             -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
             box-shadow: 0 1px 2px rgba(0,0,0,.05);
         }
-        #id_rating {
+        .rating-input {
             list-style: none;
+            margin: 0;
+            padding: 0;
         }
-        #id_rating li {
+        .rating-input li {
             display: inline;
             margin-right: 1em;
         }
-        #id_rating li label {
+        .rating-input label {
             display: inline;
+            margin-right: .5em;
+        }
+        .rating-input input {
+            vertical-align: baseline;
+            margin-right: .25em;
         }
     </style>
   </head>
